# tamasmarkovics

./: .gitignore  README.md
JavaPractice/ArrayHandler/: build.gradle
week-01/day-2/: negy.txt
week-01/day-2/5/: ot.txt
week-01/day-3/conditional_variable_mutation/: main.cpp
week-01/day-3/cpp1.fel/: CMakeLists.txt  main.cpp
week-01/day-3/cpp2.fel/: CMakeLists.txt  main.cpp
week-01/day-3/cpp3.fel/: CMakeLists.txt  main.cpp
week-01/day-3/cpp4.fel/: CMakeLists.txt  main.cpp
week-01/day-3/cpp5.fel/: CMakeLists.txt  main.cpp
week-01/day-3/theEnd/: CMakeLists.txt  main.cpp
week-01/day-3/theEnd_2/: CMakeLists.txt  main.cpp
week-01/day-3/variable_mutation/: main.cpp
week-01/day-4/ParametricAverage/: main.cpp
week-01/day-4/changeIncrementPrint/: CMakeLists.txt  main.cpp
week-01/day-4/compareLeght/: CMakeLists.txt  main.cpp
week-01/day-4/draw_chess_table/: main.cpp
week-01/day-4/matrixDoubleColors/: CMakeLists.txt  main.cpp
week-01/day-4/substring/: CMakeLists.txt  main.cpp
week-01/day-4/sumELements/: CMakeLists.txt  main.cpp
week-01/day-4/third/: main.cpp
week-01/day-5/anagram/: main.cpp
week-01/day-5/append_a_func/: main.cpp
week-01/day-5/bubble/: CMakeLists.txt  main.cpp
week-01/day-5/doublin/: CMakeLists.txt  main.cpp
week-04/day-03/extension/: CMakeLists.txt
week-04/day-03/extension/MyApp_tests/: CMakeLists.txt  executable.cpp  extension.h  myAppTest.cpp
week-07/01_malloc_calloc/: CMakeLists.txt
week-07/02_merge/: CMakeLists.txt
week-07/03_realloc/: main.c
week-07/06_percentile/: CMakeLists.txt
(+411 files in other folders)
